Støtter opprettelse av oppgaver for endret periode i EtterlysningProssesseringTjeneste. (#292)
* Støtter opprettelse av oppgaver i EtterlysningProssesseringTjeneste.

* ung-sak.openapi.json updated by build pipeline 


skip-checks:true

* Oppretter etterlysninger fra VarselRevurderingStegImpl.

* Fikser navn på script.

* Oppretter etterlysning for prosesstrigger.

* Forenkler mapping

* Forenkler mapping av trigger til Etterlysning.

* Filtrerer på relevant triggere.

* henter periodegrunnlag fra grunnlagsreferanse.
Mapper eksisterende etterlysninger med tilhørende periodegrunnlag.

* Filtrerer på relevante etterlysnin statuser.

Kaster feil dersom periodeGrunnlag på for en etterlysning er tom.

* wip

* Finner etterlysninger som skal avbrytes og opprettes basert på relevante triggere

* Fiks array -> list

* Bruker konfigurert venteperiode

* Fjerner opprettelse av bekreftet periode endring og oppretter uttalelse i steden, splitter ut opprettelse av etterlysning i egen tjeneste

* Skriver om til å anta kun en programperiode, samler oppgavene for endret startdato og sluttdato i en felles oppgave

* Fiks etter rename

* ung-sak.openapi.json updated by build pipeline 


skip-checks:true

* Legger til tester

* Fjerner bekreftet periodeendring

* Fjerner etterlysningstyper for startdato og sluttdato

* ung-sak.openapi.json updated by build pipeline 


skip-checks:true

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Espen Velsvik <espen.velsvik@nav.no>